Cleaning the notebook

--- a/Project_1.ipynb
+++ b/Project_1.ipynb
@@ -59,14 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Waiting on bqjob_r6d987f21d9e79ab3_00000174d5ba25b0_1 ... (0s) Current status: DONE   \n"
+      "Waiting on bqjob_r6f3b342fc52e8c7a_00000174d6e1f478_1 ... (1s) Current status: DONE   \n"
      ]
     }
    ],
@@ -77,23 +77,7 @@
     "FROM (SELECT *,\\\n",
     "EXTRACT(HOUR from start_date) as Start_Hour,\\\n",
     "CAST(ROUND(duration_sec / 60.0) AS INT64) AS duration_minutes\\\n",
-    "FROM (SELECT * \\\n",
-    "    FROM (SELECT *,\\\n",
-    "      CASE EXTRACT(DAYOFWEEK\\\n",
-    "      FROM\\\n",
-    "        start_date)\\\n",
-    "        WHEN 1 THEN \"Sunday\"\\\n",
-    "        WHEN 2 THEN \"Monday\"\\\n",
-    "        WHEN 3 THEN \"Tuesday\"\\\n",
-    "        WHEN 4 THEN \"Wednesday\"\\\n",
-    "        WHEN 5 THEN \"Thursday\"\\\n",
-    "        WHEN 6 THEN \"Friday\"\\\n",
-    "        WHEN 7 THEN \"Saturday\"\\\n",
-    "    END\\\n",
-    "      AS Day_of_Week,\\\n",
-    "      FROM\\\n",
-    "    `bigquery-public-data.san_francisco.bikeshare_trips`)\\\n",
-    "WHERE Day_of_Week <> \"Saturday\" AND DAY_of_Week <> \"Sunday\"))\\\n",
+    "FROM bike_trip_data.Weekday_Trips)\\\n",
     "GROUP BY\\\n",
     "  Start_Hour\\\n",
     "ORDER BY\\\n",
@@ -102,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +267,7 @@
        "23           128999           8"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +288,7 @@
        "Text(0.5, 1.0, 'Number of Rides for each Hour in Weekday')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -384,14 +368,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Waiting on bqjob_r42ddfa1341174be8_00000174d647f8a4_1 ... (1s) Current status: DONE   \n"
+      "Waiting on bqjob_r4289d0e60f29a1fb_00000174d6df79fb_1 ... (1s) Current status: DONE   \n"
      ]
     }
    ],
@@ -410,56 +394,14 @@
     "    WHEN duration_minutes >= 60 THEN \"More than 1 hour\"\\\n",
     "END\\\n",
     "  AS Trip_Duration\\\n",
-    "FROM (\\\n",
-    "  SELECT\\\n",
-    "    *\\\n",
-    "  FROM (\\\n",
-    "    SELECT\\\n",
-    "      *\\\n",
-    "    FROM (\\\n",
-    "      SELECT\\\n",
-    "        *,\\\n",
-    "        EXTRACT(HOUR\\\n",
-    "        FROM\\\n",
-    "          start_date) AS Start_Hour,\\\n",
-    "        CAST(ROUND(duration_sec / 60.0) AS INT64) AS duration_minutes\\\n",
-    "      FROM (\\\n",
-    "        SELECT\\\n",
-    "          *\\\n",
-    "        FROM (\\\n",
-    "          SELECT\\\n",
-    "            *,\\\n",
-    "            CASE EXTRACT(DAYOFWEEK\\\n",
-    "            FROM\\\n",
-    "              start_date)\\\n",
-    "              WHEN 1 THEN \"Sunday\"\\\n",
-    "              WHEN 2 THEN \"Monday\"\\\n",
-    "              WHEN 3 THEN \"Tuesday\"\\\n",
-    "              WHEN 4 THEN \"Wednesday\"\\\n",
-    "              WHEN 5 THEN \"Thursday\"\\\n",
-    "              WHEN 6 THEN \"Friday\"\\\n",
-    "              WHEN 7 THEN \"Saturday\"\\\n",
-    "          END\\\n",
-    "            AS Day_of_Week,\\\n",
-    "          FROM\\\n",
-    "            `bigquery-public-data.san_francisco.bikeshare_trips`)\\\n",
-    "        WHERE\\\n",
-    "          Day_of_Week <> \"Saturday\"\\\n",
-    "          AND DAY_of_Week <> \"Sunday\"))\\\n",
-    "    WHERE\\\n",
-    "      (Start_Hour > 6\\\n",
-    "        AND Start_Hour < 10)\\\n",
-    "      OR ((Start_Hour > 3\\\n",
-    "          AND Start_Hour < 7)))\\\n",
-    "  WHERE\\\n",
-    "    start_station_name <> end_station_name)\\\n",
+    "FROM bike_trip_data.WeekdayCrossStationTrips\\\n",
     "GROUP BY\\\n",
     "  Trip_Duration' > CommuteTripTime.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +483,7 @@
        "5              285  Between 45 and 60"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +503,7 @@
        "Text(0.5, 1.0, 'Number of Trips for given Duration')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -594,14 +536,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Waiting on bqjob_r397825d5cfebb652_00000174d6578e90_1 ... (1s) Current status: DONE   \n"
+      "Waiting on bqjob_rf2812a39e52e5b8_00000174d6e01d93_1 ... (1s) Current status: DONE   \n"
      ]
     }
    ],
@@ -620,56 +562,14 @@
     "    ELSE \"5 or More Minutes\"\\\n",
     "END\\\n",
     "  AS Trip_Duration\\\n",
-    "FROM (\\\n",
-    "  SELECT\\\n",
-    "    *\\\n",
-    "  FROM (\\\n",
-    "    SELECT\\\n",
-    "      *\\\n",
-    "    FROM (\\\n",
-    "      SELECT\\\n",
-    "        *,\\\n",
-    "        EXTRACT(HOUR\\\n",
-    "        FROM\\\n",
-    "          start_date) AS Start_Hour,\\\n",
-    "        CAST(ROUND(duration_sec / 60.0) AS INT64) AS duration_minutes\\\n",
-    "      FROM (\\\n",
-    "        SELECT\\\n",
-    "          *\\\n",
-    "        FROM (\\\n",
-    "          SELECT\\\n",
-    "            *,\\\n",
-    "            CASE EXTRACT(DAYOFWEEK\\\n",
-    "            FROM\\\n",
-    "              start_date)\\\n",
-    "              WHEN 1 THEN \"Sunday\"\\\n",
-    "              WHEN 2 THEN \"Monday\"\\\n",
-    "              WHEN 3 THEN \"Tuesday\"\\\n",
-    "              WHEN 4 THEN \"Wednesday\"\\\n",
-    "              WHEN 5 THEN \"Thursday\"\\\n",
-    "              WHEN 6 THEN \"Friday\"\\\n",
-    "              WHEN 7 THEN \"Saturday\"\\\n",
-    "          END\\\n",
-    "            AS Day_of_Week,\\\n",
-    "          FROM\\\n",
-    "            `bigquery-public-data.san_francisco.bikeshare_trips`)\\\n",
-    "        WHERE\\\n",
-    "          Day_of_Week <> \"Saturday\"\\\n",
-    "          AND DAY_of_Week <> \"Sunday\"))\\\n",
-    "    WHERE\\\n",
-    "      (Start_Hour > 6\\\n",
-    "        AND Start_Hour < 10)\\\n",
-    "      OR ((Start_Hour > 3\\\n",
-    "          AND Start_Hour < 7)))\\\n",
-    "  WHERE\\\n",
-    "    start_station_name <> end_station_name)\\\n",
+    "FROM bike_trip_data.WeekdayCrossStationTrips\\\n",
     "GROUP BY\\\n",
     "  Trip_Duration' > CommuteTripTime.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +645,7 @@
        "4             1714    Between 1 and 2"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,75 +686,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Waiting on bqjob_r4c567fe614c5f332_00000174d6c82101_1 ... (1s) Current status: DONE   \n"
+      "Waiting on bqjob_r1ed45c45b3acf79c_00000174d6e27f7c_1 ... (1s) Current status: DONE   \n"
      ]
     }
    ],
    "source": [
     "! bq query --use_legacy_sql=FALSE --format=csv \\\n",
-    "'SELECT Count(*) as Number_of_Trips,\\\n",
-    "  subscriber_type\\\n",
-    "FROM (SELECT\\\n",
-    "  *\\\n",
-    "FROM\\\n",
-    "  (SELECT\\\n",
-    "    *\\\n",
-    "  FROM (\\\n",
-    "    SELECT\\\n",
-    "      *\\\n",
-    "    FROM (\\\n",
-    "      SELECT\\\n",
-    "        *,\\\n",
-    "        EXTRACT(HOUR\\\n",
-    "        FROM\\\n",
-    "          start_date) AS Start_Hour,\\\n",
-    "        CAST(ROUND(duration_sec / 60.0) AS INT64) AS duration_minutes\\\n",
-    "      FROM (\\\n",
-    "        SELECT\\\n",
-    "          *\\\n",
-    "        FROM (\\\n",
-    "          SELECT\\\n",
-    "            *,\\\n",
-    "            CASE EXTRACT(DAYOFWEEK\\\n",
-    "            FROM\\\n",
-    "              start_date)\\\n",
-    "              WHEN 1 THEN \"Sunday\"\\\n",
-    "              WHEN 2 THEN \"Monday\"\\\n",
-    "              WHEN 3 THEN \"Tuesday\"\\\n",
-    "              WHEN 4 THEN \"Wednesday\"\\\n",
-    "              WHEN 5 THEN \"Thursday\"\\\n",
-    "              WHEN 6 THEN \"Friday\"\\\n",
-    "              WHEN 7 THEN \"Saturday\"\\\n",
-    "          END\\\n",
-    "            AS Day_of_Week,\\\n",
-    "          FROM\\\n",
-    "            `bigquery-public-data.san_francisco.bikeshare_trips`)\\\n",
-    "        WHERE\\\n",
-    "          Day_of_Week <> \"Saturday\"\\\n",
-    "          AND DAY_of_Week <> \"Sunday\"))\\\n",
-    "    WHERE\\\n",
-    "      (Start_Hour > 6\\\n",
-    "        AND Start_Hour < 10)\\\n",
-    "      OR ((Start_Hour > 3\\\n",
-    "          AND Start_Hour < 7)))\\\n",
-    "  WHERE\\\n",
-    "    start_station_name <> end_station_name)\\\n",
-    "WHERE\\\n",
-    "  duration_sec >= 180\\\n",
-    "  AND duration_minutes < 30)\\\n",
+    "'SELECT COUNT(*) AS Number_of_Trips, \\\n",
+    "    subscriber_type \\\n",
+    "FROM bike_trip_data.IncludeDuration \\\n",
     "GROUP BY subscriber_type' > Subscriber.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +756,7 @@
        "1             8568        Customer"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +777,7 @@
        "Text(0.5, 1.0, 'Number of Trips for each Subscriber Type')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -974,7 +827,125 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have our reduced database of \"commuter trips\", we need to determine the five most popular ones. To do this, we must consider how we want to define a trip. The way that I am going to determine the popularity of a trip is to find the total number of rides that go between the stations. This means that we will combine rides that start at Station A and end at Station B with the rides that start at Station B and end at Station A (we can't just look at one direction since there might be some factors around station at the other end of a commute that causes more or less ridership). Putting this into effect, we can get the following table."
+    "Now that we have our reduced database of \"commuter trips\", we need to determine the five most popular ones. To do this, we must consider how we want to define a trip. The way that I am going to determine the popularity of a trip is to find the total number of rides that go between the stations. This means that we will combine rides that start at Station A and end at Station B with the rides that start at Station B and end at Station A (we can't just look at one direction since there might be some factors around station at the other end of a commute that causes more or less ridership). To get this, we can first create a data table that gives the number of trips for a given starting and ending station."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting on bqjob_r58c7673092adfd1e_00000174d6f69d2d_1 ... (1s) Current status: DONE   \n"
+     ]
+    }
+   ],
+   "source": [
+    "! bq query --use_legacy_sql=FALSE --format=csv \\\n",
+    "'SELECT\\\n",
+    "  start_station_name,\\\n",
+    "  end_station_name,\\\n",
+    "  COUNT(*) AS Number_of_Trips\\\n",
+    "FROM\\\n",
+    "  bike_trip_data.CommuteTrips\\\n",
+    "GROUP BY\\\n",
+    "  start_station_name,\\\n",
+    "  end_station_name' > TripNumbers.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>start_station_name</th>\n",
+       "      <th>end_station_name</th>\n",
+       "      <th>Number_of_Trips</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Redwood City Caltrain Station</td>\n",
+       "      <td>Mezes</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MLK Library</td>\n",
+       "      <td>Japantown</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ryland Park</td>\n",
+       "      <td>Japantown</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>St James Park</td>\n",
+       "      <td>Japantown</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>San Pedro Square</td>\n",
+       "      <td>Japantown</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              start_station_name end_station_name  Number_of_Trips\n",
+       "0  Redwood City Caltrain Station            Mezes                6\n",
+       "1                    MLK Library        Japantown               10\n",
+       "2                    Ryland Park        Japantown               34\n",
+       "3                  St James Park        Japantown                6\n",
+       "4               San Pedro Square        Japantown                1"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tripnum = pd.read_csv(\"TripNumbers.csv\")\n",
+    "tripnum.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We may think that we are now done (just take the top five values from this table and call it a day). However, we need to realize that for our defintion, we still need to add up the inverse of trips as well (A to B as well as B to A). To do this, we can create a mirror of the table and use a join to add these together."
    ]
   },
   {
