Finished Popular Commute

--- a/Project_1.ipynb
+++ b/Project_1.ipynb
@@ -14,6 +14,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Notebook Setup\n",
+    "\n",
+    "In this notebook, I will define the five most popular commuter trips for Lyft Bay Wheels and come up with some suggestions to explore in order to increase profitability"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1\n",
+    "\n",
     "In my investigation into the dataset, the first question I want to answer is what are the five most popular commuter trips? This will take me defining what a commuter trip is, then looking in the data for the answer once I pare down the data. To start, I will go through the process of defining a \"commuter trip\"."
    ]
   },
@@ -946,6 +957,375 @@
    "metadata": {},
    "source": [
     "We may think that we are now done (just take the top five values from this table and call it a day). However, we need to realize that for our defintion, we still need to add up the inverse of trips as well (A to B as well as B to A). To do this, we can create a mirror of the table and use a join to add these together."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SQL for view TotalTripsEachRoute\n",
+    "```\n",
+    "SELECT\n",
+    "  One.start_station_name as Station_1, One.end_station_name as Station_2, \n",
+    "  (One.Number_of_Trips + Two.Number_of_Trips) as Num_Trips\n",
+    "FROM\n",
+    "    bike_trip_data.StartTripNumber AS One\n",
+    "INNER JOIN bike_trip_data.StartTripNumber2 AS Two ON \n",
+    "        (One.start_station_name = Two.ending AND One.end_station_name = Two.start)\n",
+    "```\n",
+    "\n",
+    "In this SQL, the two versions of the table from above are StartTripNumber and StartTripNumber2 (The mirror has the column names changed to make it easier for me to work with both)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we can look at our final table, with which we are two steps away from determining the most popular commuting trips."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting on bqjob_r5730569f04005e3c_00000174d752c18d_1 ... (2s) Current status: DONE   \n"
+     ]
+    }
+   ],
+   "source": [
+    "! bq query --use_legacy_sql=FALSE --format=csv \\\n",
+    "'SELECT * \\\n",
+    "FROM bike_trip_data.FinalCommuteTable' > commute.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Station_1</th>\n",
+       "      <th>Station_2</th>\n",
+       "      <th>Num_Trips</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Redwood City Caltrain Station</td>\n",
+       "      <td>Mezes</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MLK Library</td>\n",
+       "      <td>Japantown</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ryland Park</td>\n",
+       "      <td>Japantown</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>St James Park</td>\n",
+       "      <td>Japantown</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>San Pedro Square</td>\n",
+       "      <td>Japantown</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Station_1  Station_2  Num_Trips\n",
+       "0  Redwood City Caltrain Station      Mezes         95\n",
+       "1                    MLK Library  Japantown         51\n",
+       "2                    Ryland Park  Japantown         38\n",
+       "3                  St James Park  Japantown         15\n",
+       "4               San Pedro Square  Japantown         25"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "commutetable = pd.read_csv(\"commute.csv\")\n",
+    "commutetable.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The one remaining issue in this table is the fact that for each route that had trips going both ways we will have two values representing it. We then can take the top 10 trips (since each of the top five is duplicated) and take every second row to get the five most popular commuting trips."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting on bqjob_r5b499f7b5dcee7b8_00000174d75c57cf_1 ... (1s) Current status: DONE   \n"
+     ]
+    }
+   ],
+   "source": [
+    "! bq query --use_legacy_sql=FALSE --format=csv \\\n",
+    "'SELECT\\\n",
+    "  *\\\n",
+    "FROM\\\n",
+    "  bike_trip_data.FinalCommuteTable\\\n",
+    "ORDER BY Num_Trips DESC\\\n",
+    "' > Duplicate.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Station_1</th>\n",
+       "      <th>Station_2</th>\n",
+       "      <th>Num_Trips</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Harry Bridges Plaza (Ferry Building)</td>\n",
+       "      <td>2nd at Townsend</td>\n",
+       "      <td>5708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2nd at Townsend</td>\n",
+       "      <td>Harry Bridges Plaza (Ferry Building)</td>\n",
+       "      <td>5708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Temporary Transbay Terminal (Howard at Beale)</td>\n",
+       "      <td>San Francisco Caltrain (Townsend at 4th)</td>\n",
+       "      <td>5071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>San Francisco Caltrain (Townsend at 4th)</td>\n",
+       "      <td>Temporary Transbay Terminal (Howard at Beale)</td>\n",
+       "      <td>5071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>San Francisco Caltrain (Townsend at 4th)</td>\n",
+       "      <td>Harry Bridges Plaza (Ferry Building)</td>\n",
+       "      <td>4934</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       Station_1  \\\n",
+       "0           Harry Bridges Plaza (Ferry Building)   \n",
+       "1                                2nd at Townsend   \n",
+       "2  Temporary Transbay Terminal (Howard at Beale)   \n",
+       "3       San Francisco Caltrain (Townsend at 4th)   \n",
+       "4       San Francisco Caltrain (Townsend at 4th)   \n",
+       "\n",
+       "                                       Station_2  Num_Trips  \n",
+       "0                                2nd at Townsend       5708  \n",
+       "1           Harry Bridges Plaza (Ferry Building)       5708  \n",
+       "2       San Francisco Caltrain (Townsend at 4th)       5071  \n",
+       "3  Temporary Transbay Terminal (Howard at Beale)       5071  \n",
+       "4           Harry Bridges Plaza (Ferry Building)       4934  "
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duptable = pd.read_csv(\"Duplicate.csv\")\n",
+    "duptable.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Station_1</th>\n",
+       "      <th>Station_2</th>\n",
+       "      <th>Num_Trips</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Harry Bridges Plaza (Ferry Building)</td>\n",
+       "      <td>2nd at Townsend</td>\n",
+       "      <td>5708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Temporary Transbay Terminal (Howard at Beale)</td>\n",
+       "      <td>San Francisco Caltrain (Townsend at 4th)</td>\n",
+       "      <td>5071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>San Francisco Caltrain (Townsend at 4th)</td>\n",
+       "      <td>Harry Bridges Plaza (Ferry Building)</td>\n",
+       "      <td>4934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>San Francisco Caltrain 2 (330 Townsend)</td>\n",
+       "      <td>Townsend at 7th</td>\n",
+       "      <td>4816</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Steuart at Market</td>\n",
+       "      <td>2nd at Townsend</td>\n",
+       "      <td>4749</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       Station_1  \\\n",
+       "0           Harry Bridges Plaza (Ferry Building)   \n",
+       "1  Temporary Transbay Terminal (Howard at Beale)   \n",
+       "2       San Francisco Caltrain (Townsend at 4th)   \n",
+       "3        San Francisco Caltrain 2 (330 Townsend)   \n",
+       "4                              Steuart at Market   \n",
+       "\n",
+       "                                  Station_2  Num_Trips  \n",
+       "0                           2nd at Townsend       5708  \n",
+       "1  San Francisco Caltrain (Townsend at 4th)       5071  \n",
+       "2      Harry Bridges Plaza (Ferry Building)       4934  \n",
+       "3                           Townsend at 7th       4816  \n",
+       "4                           2nd at Townsend       4749  "
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duptable.iloc[::2].reset_index(drop=True).head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At the end of our procedure, we find that the five most popular commuter trips are between\n",
+    "```\n",
+    "1. Harry Bridges Plaza (The Ferry Building) and 2nd at Townsend with 5708 trips\n",
+    "\n",
+    "2. Temporary Transbay Terminal (Howard at Beale) and San Francisco Caltrain (Townsend at 4th) with 5071 trips\n",
+    "    \n",
+    "3. San Francisco Caltrain(Townsend at 4th) and Harry Bridges Plaza (The Ferry Building) with 4934 trips\n",
+    "\n",
+    "4. San Francisco Caltrain 2 (330 Townsend) and Townsend at 7th with 4816 trips\n",
+    "\n",
+    "5. Steuart at Market and 2nd at Townsend with 4749 trips\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "Now that we have figured out the 5 most popular commuter trips, we can then turn our attention to possible reccomendations to improve revenue."
    ]
   },
   {
