--- a/Project_1.ipynb
+++ b/Project_1.ipynb
@@ -2846,7 +2846,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After looking into the individual stations MORE ANALYSIS"
+    "After looking into the individual stations we can see that there are clearly some stations that are underutilized or underperforming. When we compare these stations to region averages (we can also see that there are also relatively underperforming regions) then some of the stations are even well below those averages. Of course, all of the stations we were analyzing were installed before 2014 to ensure a proper range of coverage during our data collection. We might want to re-evaluate our product when it comes to underperforming stations and regions."
    ]
   },
   {
@@ -2855,7 +2855,7 @@
    "source": [
     "#### Second Recommendations\n",
     "\n",
-    "MORE ANALYSIS"
+    "The first recommendation would be to evaluate our strategy for the San Francisco stations of Post at Kearney and Washington at Kearney. These two stations significantly underperform as compared to the normal traffic of our San Francisco stations (the only stations below 10,000 total rides and significantly below over a comparable timeframe). I would recommend either closing these two stations and diverting resources (bikes, worker hours, etc) to other, more trafficked stations or to run an advertisement campaign in the localities (whether that be ads or special offers) to help support ridership. On the other hand, the other 4 regions (San Jose, Mountain View, Palo Alto, and Redwood City) don't have stations that are underperforming as clearly. However, each of these regions has issues with total ridership. San Jose and Mountain View have decent ridership number and likely aren't in too much trouble (though San Jose has a couple of borderline underperforming stations) but Redwood City and Palo Alto have very low ridership numbers at all stations other than their respective Caltrain stations. We need to decide whether or not it is feasible to continue service in these areas. My recommendation would again be to minimize service in Redwood City (or modify the model to make it more conducive to commuters or subscribers keeping the bike overnight with reduced fees) and put more resources into larger markets such as San Francisco and San Jose (where we find larger ridership pools and volumes of people) as well as limiting future stations in Palo Alto unless we put some measures into place to increase usage (partnering with Stanford, etc)."
    ]
   },
   {
@@ -3087,7 +3087,39 @@
    "source": [
     "#### Third Recommendations\n",
     "\n",
-    "\"Out on the town\""
+    "With the tendency for stations to be \"full\" during late night and early morning hours, we can add incentives to try and draw customers during those times. We could do a half off \"Out on the town\" deal from 7pm until midnight every day of the week (starts late enough to not impact commuters if we reference earlier work) in order to encourage ridership. In addition, we could do a similar half-off \"pre-work workout package\" or \"early morning cycling package\" in the mornings of the week and weekend respectively from 4am to 6am to try and draw the early risers who like to exercise before work."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SQL for View SpatialTrips\n",
+    "```\n",
+    "SELECT\n",
+    "  table1.*,\n",
+    "  table2.longitude,\n",
+    "  table2.latitude,\n",
+    "  table2.landmark\n",
+    "FROM (\n",
+    "  SELECT\n",
+    "    start_station_id,\n",
+    "    bike_number,\n",
+    "    duration_sec,\n",
+    "    end_station_id\n",
+    "  FROM\n",
+    "    bigquery-public-data.san_francisco.bikeshare_trips) AS table1\n",
+    "INNER JOIN (\n",
+    "  SELECT\n",
+    "    latitude,\n",
+    "    longitude,\n",
+    "    landmark,\n",
+    "    station_id\n",
+    "  FROM\n",
+    "    bigquery-public-data.san_francisco.bikeshare_stations) AS table2\n",
+    "ON\n",
+    "  table1.start_station_id = table2.station_id\n",
+    "```"
    ]
   },
   {
