Finish first 3 analysis, recs

--- a/Project_1.ipynb
+++ b/Project_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
    "source": [
     "# Notebook Setup\n",
     "\n",
-    "In this notebook, I will define the five most popular commuter trips for Lyft Bay Wheels and come up with some suggestions to explore in order to increase profitability"
+    "In this notebook, I will define the five most popular commuter trips for Lyft Bay Wheels and come up with some suggestions to explore in order to increase profitability."
    ]
   },
   {
@@ -1875,7 +1875,7 @@
    "metadata": {},
    "source": [
     "#### First Recommendations\n",
-    "I would reccomend offering day passes on the weekends where for a set charge (10 or 20 dollars) a rider could rent a bike between 10am and 4pm. This could help encourage ridership by making longer trips and day trips more convenient, allowing us to be more competitive for recreational transportation. Another offer that I would like to propose would be a midday ride voucher. Akin to the free BART pass in San Francisco, the midday ride voucher would allow for the first 30 minutes and unlocking of the bike to be free (as compared to the current values where it costs 2 dollars to unlock and 2 dollars for the first 30 minutes) as long as the bike is checked our between 10 am and 3 pm. This sort of free incentive can generate interest in our service, and help introduce potential customers and subscribers to our business."
+    "I would reccomend offering day passes on the weekends where for a set charge (10 or 20 dollars) a rider could rent a bike between 10am and 4pm. This could help encourage ridership by making longer trips and day trips more convenient, allowing us to be more competitive for recreational transportation. Another offer that I would like to propose would be a midday ride voucher during the week. Akin to the free BART pass in San Francisco, the midday ride voucher would allow for the first 30 minutes and unlocking of the bike to be free (as compared to the current values where it costs 2 dollars to unlock and 2 dollars for the first 30 minutes) as long as the bike is checked our between 10 am and 3 pm. This sort of free incentive can generate interest in our service, and help introduce potential customers and subscribers to our business as well as boosting customer rides during the week without impacting our subscribers."
    ]
   },
   {
@@ -2862,6 +2862,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can also look for times where our infrastructure is being underutilized. To do this, we will take a look at the number of bikes available at each station as a percentage of capacity. We want to see if there are any times that we could benefit from an increase in ridership without inconveniencing our regular subscribers and customers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### This is the SQL for the MostlyFullStations View\n",
     "```\n",
     "SELECT\n",
@@ -3119,6 +3126,35 @@
     "    bigquery-public-data.san_francisco.bikeshare_stations) AS table2\n",
     "ON\n",
     "  table1.start_station_id = table2.station_id\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At the end of our analysis and exploration I have quite a few recommendations. Below is a summary list of them.\n",
+    "```\n",
+    "* Weekend pass for set fee (to be decided) for unlimited rides between 10am and 4pm\n",
+    "\n",
+    "* Midday Ride Voucher for free unlock, 30 minutes between 10 am and 3 pm during the week\n",
+    "\n",
+    "* Close SF stations Post at Kearney and Washington at Kearney or run promotion/initiative to increase awareness and ridership\n",
+    "\n",
+    "* Minimize service in Redwood City or change model to allow subscribers to keep bikes overnight for a lesser fee and serve with stations at Caltrain\n",
+    "\n",
+    "* Limit future developments in Palo Alto unless situation changes (spikes in ridership, partner with Stanford, etc)\n",
+    "\n",
+    "* Half-off \"Out-on-the-Town\" promotion 7pm - midnight every day of the week to boost ridership.\n",
+    "\n",
+    "* \"Pre-work Workout Package\" or \"Early Morning Cycling Package\" at 4 am - 6am to encourage use during those hours; regular customers if done well.\n",
     "```"
    ]
   },
